--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethanol UI - Modern Admin Dashboard</title>
+    <title>Ethanol UI - Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=pages/dashboard.html">
     <script>
-        window.location.href = 'pages/dashboard.html';
+        window.location.href = "pages/dashboard.html";
     </script>
 </head>
 <body>
-    <p>Redirecting to <a href="pages/dashboard.html">dashboard</a>...</p>
+    <p>Redirecting to <a href="pages/dashboard.html">Dashboard</a>...</p>
 </body>
 </html>
 
