feat: add Card and Modal components to documentation, update sidebar links across multiple pages

--- a/pages/components-button-groups.html
+++ b/pages/components-button-groups.html
@@ -123,6 +123,16 @@
                     <span>Card</span>
                   </a>
                 </li>
+                <li>
+                  <a
+                    href="components-modal.html"
+                    class="submenu-item"
+                    data-title="Modal"
+                  >
+                    <i class="bi bi-window me-2"></i>
+                    <span>Modal</span>
+                  </a>
+                </li>
               </ul>
             </li>
           </ul>
