feat: add Breadcrumb component documentation and styles, update sidebar links across multiple pages

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -139,6 +139,16 @@
                     <span>Modal</span>
                   </a>
                 </li>
+                <li>
+                  <a
+                    href="components-breadcrumb.html"
+                    class="submenu-item"
+                    data-title="Breadcrumb"
+                  >
+                    <i class="bi bi-diagram-3 me-2"></i>
+                    <span>Breadcrumb</span>
+                  </a>
+                </li>
               </ul>
             </li>
           </ul>
