--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -169,20 +169,6 @@
               <i class="bi bi-list fs-4"></i>
             </button>
 
-            <!-- Search -->
-            <div class="d-none d-md-flex align-items-center ms-3">
-              <div class="input-group" style="max-width: 400px">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Search..."
-                />
-                <button class="btn btn-outline-light" type="button">
-                  <i class="bi bi-search"></i>
-                </button>
-              </div>
-            </div>
-
             <!-- Right Side -->
             <div class="ms-auto d-flex align-items-center gap-2">
               <!-- Dark Mode Toggle -->
@@ -191,7 +177,6 @@
                 id="darkModeToggle"
                 type="button"
                 title="Toggle Dark Mode"
-                onclick="if(typeof ThemeManager !== 'undefined') ThemeManager.toggleDarkMode();"
               >
                 <i class="bi bi-moon-stars fs-5"></i>
               </button>
@@ -199,8 +184,9 @@
               <!-- Notifications -->
               <div class="dropdown">
                 <button
-                  class="btn btn-link text-white position-relative topbar-action-btn"
+                  class="btn btn-link text-white topbar-action-btn position-relative"
                   type="button"
+                  id="notificationDropdown"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
@@ -683,7 +669,9 @@
                       </div>
                       <div class="flex-grow-1">
                         <div class="dropdown-item-title">Help & Support</div>
-                        <div class="dropdown-item-subtitle">Get assistance</div>
+                        <div class="dropdown-item-subtitle">
+                          Get help and support
+                        </div>
                       </div>
                       <i class="bi bi-chevron-right dropdown-arrow"></i>
                     </a>
